<resources>
    <string name="app_name">WiFiDirectMultiGroup</string>
    <string name="btn_send">Send</string>
    <string name="txt_hint">Type Message</string>
    <string name="start_btn">Start</string>
    <string name="ping_pong_interval">Tempo permanenza in gruppo (seconds)</string>
    <string name="packet_generation_interval">Intervallo generazione pacchetti (seconds)</string>
    <string name="packet_size">Grandezza pacchetti (KiB)</string>
    <string name="cancel">Cancel</string>
    <string name="messages_title">Messaggi</string>
    <string name="messages_part_received">Parziale Ricevuti</string>
    <string name="messages_part_send">Parziale Inviati</string>
    <string name="messages_tot_received">Totale Ricevuti</string>
    <string name="messages_tot_send">Totale Inviati</string>
    <string name="time_title">Tempo</string>
    <string name="avg_rtt">RTT medio</string>
    <string name="avg_ttr">TTR medio</string>
    <string name="run_title">Run</string>
    <string name="run">Numero run</string>
</resources>
