<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable name="info" type="it.unibo.mobile.d2dchat.infoReport.InfoMessage"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_weight="0.92"
                android:text="@string/messages_title"
                android:textColor="@android:color/black" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Generator?"
                android:layout_weight="0.06"
                android:visibility="@{info.go ? View.VISIBLE : View.GONE}"/>

        </LinearLayout>

        <View style="@style/Seperator"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="168dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:text="@string/messages_part_received" />

                <TextView
                    android:id="@+id/recv_mess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:text="@{info.partialRecvMessage.toString()}"
                    android:textAlignment="textEnd" />
            </TableRow>

            <View
                style="@style/Seperator"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:text="@string/messages_tot_received" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:text="@{info.totalRecvMessage.toString()}"
                    android:textAlignment="textEnd" />
            </TableRow>


            <View
                style="@style/Seperator"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:text="@string/messages_part_send" />

                <TextView
                    android:id="@+id/sent_mess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:text="@{info.partialSentMessage.toString()}"
                    android:textAlignment="textEnd" />
            </TableRow>
            <View
                style="@style/Seperator"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:text="@string/messages_tot_send" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:text="@{info.totalSentMessage.toString()}"
                    android:textAlignment="textEnd" />
            </TableRow>
            <View
                style="@style/Seperator"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray" />
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_weight="0.92"
                android:text="@string/time_title"
                android:textColor="@android:color/black" />

        </LinearLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="110dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/rtt_mess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:text="@string/avg_rtt" />

                <TextView
                    android:id="@+id/rtt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:text="@{String.valueOf(info.averageRTT)}"
                    android:textAlignment="textEnd" />
            </TableRow>

            <View
                style="@style/Seperator"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/ttr_mess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:text="@string/avg_ttr" />

                <TextView
                    android:id="@+id/ttr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:text="@{String.valueOf(info.averageReconnectionTime)}"
                    android:textAlignment="textEnd" />
            </TableRow>

            <View
                style="@style/Seperator"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray" />

        </TableLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:text="Print Now" />

    </LinearLayout>
</layout>